static/css/stylesheet.css
/* --------------- Main Body CSS  ---------------*/

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background-color: #ece8d7;
}

.nav-wrapper {
  background-color: #524c48;
}

.brand-logo {
  margin: 8px 0px 2px 20px;
}

.nav-extended {
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 1px;
  font-family: 'Special Elite', serif;
}

section {
  flex: 1 0 auto;
}

/* ------------------------------------ Welcome Messages ------------------------------------ */

.welcomemessage {
  color: #fff;
  font-size: 1.45em;
  font-weight: 500;
  letter-spacing: 2px;
  font-family: 'Special Elite', serif;
}

.welcomecard {
  margin-top: 10px;
  border-radius: 10px;
  background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(82, 76, 72));
}

#welcomecardheader {
  background-color: #524c48;
  color: #fff;
  font-family: 'Special Elite', serif;
}

.welcomepanel {
  margin-top: 20px;
  background-color: #524c48;
  background-image: url('/static/img/prateek-katyal-unsplash-books.jpg');
  background-size: cover;
  border-radius: 5px;
}

/* ------------------------------------ Login and Registration sections ------------------------------------ */

#loginpanel {
  border-radius: 10px;
}

#registrationcard {
  background-color: #524c48;
  color: #fff;
  font-weight: 500;
  letter-spacing: 1px;
  font-family: 'Special Elite', serif;
  border-radius: 10px;
  margin-top: 10px;
  font-size: 1em;
}

h4#newtolibrary {
  font-size: 1.5em;
  font-weight: 600;
  letter-spacing: 1px;
}

div.card-panel.login {
  border-radius: 20px;
}

div.card-panel.bookcontent {
  border-radius: 20px;
  padding: 24px;
  margin: 0.5rem 0 1rem 0;
}

a.white-text {
  text-decoration: underline;
}

.account {
  font-weight: 700;
  font-family: 'Libre Baskerville', serif;
  color: #fff;
}

.registrationline {
  margin-top: 50px;
  background-color: #524c48;
}

/* ------------------------------------ Buttons ------------------------------------*/

.btn-large {
  background-color: #524c48;
  color: #fff;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}

div.submitbutton {
  margin-top: 10px;
  border-radius: 10px;
}

button.btn-large {
  border-radius: 10px;
}

/* ------------------------------------ How To Sections ------------------------------------ */

div.explanation {
  background-color: #524c48;
  color: #fff;
  border-radius: 10px;
  font-weight: 500;
  font-size: 0.8em;
  font-family: 'Libre Baskerville', serif;
}

h5.howto {
  font-weight: 500;
  font-size: 2em;
  font-family: 'Special Elite', serif;
  color:#fff;
}

li.uploading {
  padding-top: 15px;
}

/* ------------------------------------ Book Entry Cards ------------------------------------ */

.cardcontent {
  padding: 10px 0px 0px 5px;
  font-size: 0.75em;
  font-weight: 500;
  color: white;
  font-family: 'Libre Baskerville', serif;
}

p {
  font-weight: 500;
  font-family: 'Libre Baskerville', serif;
  letter-spacing: 1px;
}

p strong {
  font-weight: 600;
  font-family: 'Special Elite', serif;
  letter-spacing: 1px;
}

div.card-panel.bluecat {
  background-color: #618C97;
  border-radius: 20px;
  padding: 24px;
  margin: 0.5rem 0 1rem 0;
  font-family: 'Libre Baskerville', serif;
}

div.card-panel.browncat {
  border-radius: 20px;
  background-color: #524c48;
  border-radius: 20px;
  padding: 24px;
  margin: 0.5rem 0 1rem 0;
  font-family: 'Libre Baskerville', serif;
}

/* ------------------------------------ Forms ------------------------------------ */

div.formentry {
  margin-bottom: -20px;
  font-family: 'Libre Baskerville', serif;
}

.modal-content {
  font-family: 'Libre Baskerville', serif;
}

/* ------------------------------------- Book Deletion Modal ------------------------------------ */

.deletebook {
  font-family: 'Libre Baskerville', serif;
  border-radius: 5px;
  color: #524c48;
}

a.cancelbutton {
  padding-top: 3px;
  margin-right: 3px;
  background-color: #524c48;
  color: #fff;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}

a.cancelbutton:active {
  padding-top: 3px;
  margin-right: 3px;
  background-color: #524c48;
  color: #fff;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}

a.cancelbutton:hover {
  padding-top: 3px;
  margin-right: 3px;
  background-color: #fff;
  color: #524c48;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}

a.deletebutton {
  padding-top: 3px;
  background-color: #a70000;
  color: #fff;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}
a.deletebutton:hover {
  padding-top: 3px;
  color: #000000;
  border-radius: 10px;
  font-family: 'Special Elite', serif;
}

/* ------------------------------------ Flash Messages ------------------------------------ */

h3.noresultstext {
  font-size: 1rem;
  font-weight: 600;
  letter-spacing: 2px;
  color: #524c48;
  font-family: 'Libre Baskerville', serif;
}

.flashedmessages {
    font-size: 0.5rem;
    font-weight: 600;
    letter-spacing: 2px;
    color: #524c48;
    font-family: 'Libre Baskerville', serif;
  }

/*------------------------------------ MEDIA QUERIES ------------------------------------ */

/* Index page - 320px x 480px */

@media screen and (min-width: 320px) and (max-width: 480px) {
  nav a.brand-logo {
    position: relative;
    font-size: 1.2rem;
    padding-right: 40px;
    margin: 0;
  }

  #welcomecardheader {
    font-family: 'Special Elite', serif;
    padding: 0px;
  }

  div#welcomecontent h4 {
    font-size: 1.75rem;
    line-height: 100%;
    margin: 1.52rem 0 0.912rem 0;
  }

  div.registrationline p {
    font-size: 11px;
  }

  a.reset {
    margin-bottom: 8px;
  }
}

@media screen and (min-width: 480px) and (max-width: 700px) {
  nav a.brand-logo {
    position: relative;
    font-size: 2rem;
    padding-right: 40px;
    margin: 0;
  }

  a.reset {
    margin-bottom: 8px;
  }
}

/* ------ 769 x 1024-------*/

@media screen and (min-width:769px) and (max-width: 1024px) {

  div#welcomecardheader,
  form#loginform,
  div#registrationcard,
  form#registerform {
    width: 50%;
    margin-left: 25%;
  }
}

@media screen and (min-width:1025px) {
  a.reset {
    margin-right: 2px;
  }
}

